--- a/src/App.css
+++ b/src/App.css
@@ -67,16 +67,18 @@
   width: 300px;
   height: 500px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .mt-4{
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: start;
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 40px;
+  padding-top: 38px;
 }
 
 .showHall{
@@ -254,12 +256,60 @@
   cursor: pointer;
 }
 
+.conectToAdmin{
+  direction: rtl;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+  margin-top: 20px;
+  background-image: url(assets/home4.jpg);
+  background-size: cover;
+  background-position: center;
+  /* align-items: center; */
+}
+
+.conectPart1{
+  width: 55%;
+}
+
+.conectPart2{
+  width: 40%;
+  height: 550px;
+}
+
 
 
 .mainShoHall{
   display: flex;
   width: 100%;
   flex-direction: column;
+}
+
+.inputSearch{
+  border: 1px solid gray;
+  padding: 5px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.addHallShow{
+  background-color: white;
+  margin-right: 10px;
+  padding: 16px;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.1);
+  width: 95%;
+  height: 550px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 @media (max-width:700px) {
@@ -312,6 +362,27 @@
     direction: ltr;
     /* float: left; */
     margin-right: 0px;
+  }
+  .conectToAdmin{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20px;
+    align-items: center;
+  }
+  .conectPart1{
+    width: 90%;
+  }
+  
+  .conectPart2{
+    width: 90%;
+    height: 550px;
+    margin-bottom: 380px;
+  }
+
+  .mt-4{
+    justify-content: center;
   }
 
 }
