--- a/src/App.css
+++ b/src/App.css
@@ -273,6 +273,10 @@
 
 .conectPart1{
   width: 55%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding-bottom: 230px;
 }
 
 .conectPart2{
@@ -310,6 +314,23 @@
   position: relative;
   flex-wrap: wrap;
   align-items: center;
+}
+
+.search{
+  width: 100%;
+    justify-content: space-between;
+    padding-left: 30px;
+    position: fixed;
+    top: 70px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom-width: 1px;
+    height: 55px;
+    border-bottom-color: gray;
+    border-bottom: solid;
+    padding-right: 15px;
+    background: white;
 }
 
 @media (max-width:700px) {
@@ -383,6 +404,15 @@
 
   .mt-4{
     justify-content: center;
+  }
+  .search{
+    flex-direction: column-reverse;
+    height: 130px;
+    width: 100%;
+  }
+  .inputSearch{
+    width: 100%;
+    margin-bottom: 0px;
   }
 
 }
