--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@
 .sircelHeader{
   height: 50px;
   width: 50px;
-  background-color: aqua ;
+  background-color: rgb(0, 0, 0) ;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -184,10 +184,11 @@
   font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
   margin: 10px;
+  color: white;
 }
 
 .titleProperty{
-  background-color: aqua;
+  background-color: black;
   height: 40px;
   width: 130px;
   display: flex;
@@ -196,6 +197,14 @@
   padding: 10px;
   margin-left: 20px;
   border-radius: 2px;
+  color: white;
+}
+
+.home-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px black solid;
 }
 
 .imgProperti{
